[gd_scene load_steps=6 format=3 uid="uid://dpxppnxk4grjg"]

[ext_resource type="Texture2D" uid="uid://ploi7tcdx5mr" path="res://BoardBackground.png" id="1_ng6p3"]
[ext_resource type="Script" path="res://Grid.gd" id="2_rv7a0"]
[ext_resource type="AudioStream" uid="uid://chje2dkl7t7x5" path="res://Mismatch.mp3" id="3_kblih"]
[ext_resource type="AudioStream" uid="uid://cbmaogiejpcp4" path="res://Match.wav" id="4_awtjo"]
[ext_resource type="AudioStream" uid="uid://d2bche3h61l7m" path="res://TitleScreenMusic.ogg" id="4_ed3gc"]

[node name="Board" type="Node2D"]

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(958.274, 604.75)
scale = Vector2(1.18517, 1.18517)
texture = ExtResource("1_ng6p3")

[node name="Grid" type="GridContainer" parent="."]
clip_contents = true
custom_minimum_size = Vector2(256, 256)
offset_left = 176.0
offset_top = 80.0
offset_right = 1712.0
offset_bottom = 952.0
columns = 4
script = ExtResource("2_rv7a0")

[node name="MismatchSound" type="AudioStreamPlayer2D" parent="Grid"]
stream = ExtResource("3_kblih")

[node name="MatchSound" type="AudioStreamPlayer2D" parent="Grid"]
stream = ExtResource("4_awtjo")

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ed3gc")
volume_db = -11.712
autoplay = true

[node name="Button" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
text = "Shuffle"

[connection signal="pressed" from="Button" to="Grid" method="_on_button_pressed"]
